--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,20 +1,21 @@
 
 body {
+    /* background: #1e1f24; */
     color: #333;
-    text-align: left;
-    font-family:''Arial, Helvetica, sans-serif;
+    text-align: center;
+    font-family: Arial;
     font-size: 16px;
     margin: 0;
-    padding: 0%;
+    padding: 0;
 }
 
 #cabecera {
-    background: #33A;
+    background: #37488b;
     box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
     color: white;
     font-weight: bold;
     margin: 0;
-    padding: 0.9em;
+    padding: 0.5em;
 }
 
 #cabecera #tagline {
@@ -24,8 +25,7 @@ body {
 }
 
 #container  {
-    width: 80%;
-    padding: 1em;
+    width: 90%;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
@@ -33,4 +33,17 @@ body {
 
 #container h1 {
     font-size: 20px;
+    
+}
+
+#post {
+    background: white;
+    padding: 1em;
+}
+
+#footer {
+    background: #777;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
 }
